--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 /* Import Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap'); 
 
-/* Anything that isn't a heading should use Open Sane */
+/* Anything that isn't a heading should use Open Sans */
 * {
     font-family: 'Open Sans', sans-serif;
 }
@@ -16,4 +16,19 @@
 /* Headings use Montserrat */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
+}
+
+/* Page Footer */
+footer#page-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: RGBA(0, 0, 0, 0.8);
+}
+
+/* Page Footer Text */
+footer#page-footer small, footer#page-footer small a {
+    color: white;
 }
