--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ nav a.active, nav a.active:hover {
     color: seagreen;
     transform: scale(1);
     cursor: default;
+    border-radius: 3px;
 }
 
 /* Page Footer */
@@ -132,6 +133,7 @@ main#index-body section#content {
     position: relative;
     top: -10%; 
     text-align: center;
+    border-radius: 3px;
 }
 
 /* Heading Size */
