--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ nav a {
     transform: scale(1);
     transition: all 0.2s ease;
     display: inline-block;
-    margin: 0px 10px;
+    margin: 0% 1%;
 }
 
 /* Nav Link when hovered over */
