--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,38 @@ nav a.active, nav a.active:hover {
     border-radius: 3px;
 }
 
+/* Nav Toggle When on desktop */
+nav #nav-toggle {
+    display: none;
+}
+
+/* Mobile Nav */
+@media screen and (max-width: 768px) {
+
+    nav a:not(:first-child) {
+        display: none;
+    }
+
+    nav a#nav-toggle {
+        display: block;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    nav.mobile {
+        display: block; 
+        overflow: hidden; 
+        margin: 0;
+    }
+
+    nav.mobile a {
+        width: 90%;
+        display: block;
+        margin: 5px auto;
+        padding: 5px;
+    }
+}
+
 /* Font Awesome Icons */
 .fa {
     width: 15px;
