--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ nav #nav-toggle {
     opacity: 0.6;
 }
 
+/* Standard page basic style */
 #page-main {
     padding-bottom: 20px; /* To offset footer */
 }
