--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,13 @@ nav #nav-toggle {
 /* Sections on standard pages */
 /* This is a bodge solution, need to replace with something more elegant */
 #page-main section.col-8 {
-    margin-left: 16.66%;
+    margin-left: 0%;
+}
+
+@media only screen and (min-width: 768px) {
+    #page-main section.col-8 {
+        margin-left: 16.66%;
+    }
 }
 
 /* Page Footer */
