--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ header div#banner {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 70%;
+    background-color: RGBA(0, 0, 0, 0.6); /* Look cleaner on load? */
 }
 
 /* Nav */
@@ -251,6 +252,7 @@ main#index-body section#content h1 {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: RGBA(0, 0, 0, 0.6); /* Look cleaner on load? */
 }
 
 /* Handle how the attributes are displayed*/
