--- a/css/styles.css
+++ b/css/styles.css
@@ -242,17 +242,20 @@ main#index-body section#content h1 {
     display: flex;
 }
 
-#trail-image, #trail-info {
-    flex: 1;
-}
-
 /* Image of trail */
-#trail-img {
+.trail-img {
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-color: RGBA(0, 0, 0, 0.6); /* Look cleaner on load? */
+    min-height: 200px;
+}
+
+.trail-img#mobile-trail-img {
+    width: 100%;
+    border-left: 5px solid white; /* Cut down image on either side */
+    border-right: 5px solid white; /* Cut down image on either side */
 }
 
 /* Handle how the attributes are displayed*/
