Load results as table

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,3 +310,34 @@ main#index-body section#content h1 {
 .attribute-image:hover + .attribute-text {
     display: block;
 }
+
+/* Search results */
+table#search-results {
+    border-collapse: collapse;
+}
+
+table#search-results td, table#search-results th {
+    border: 1px solid RGBA(0, 0, 0, 0.1);
+    padding: 8px;
+}
+
+table#search-results tr:nth-child(even) {
+    background-color: RGBA(0, 0, 0, 0.05);
+}
+
+table#search-results tr {
+    transition: ease all 0.2s;
+}
+
+table#search-results tr:hover {
+    background-color: RGBA(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+table#search-results th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: seagreen;
+    color: white;
+}
