--- a/css/styles.css
+++ b/css/styles.css
@@ -189,9 +189,10 @@ footer#page-footer {
     position: fixed;
     bottom: 0;
     left: 0;
+    padding-bottom: 2px;
     width: 100%;
     text-align: center;
-    background-color: RGBA(0, 0, 0, 0.8);
+    background-color: black;
 }
 
 /* Page Footer Text */
