--- a/css/styles.css
+++ b/css/styles.css
@@ -354,8 +354,14 @@ form#trail-search input, form#trail-search p {
     border: 1px solid RGBA(0, 0, 0, 0.1);
     height: 40px;
     margin: -1px;
-    margin-top: 4px;
     border-radius: 3px;
+}
+
+/* Changing up margins on desktop */
+@media only screen and (min-width: 768px) {
+    form#trail-search input, form#trail-search p {
+        margin-top: 4px;
+    }
 }
 
 form#trail-search input[type="submit"] {
